# linkedin-intelligence-system

./: .gitignore  LICENSE  README.md  Tools.md  lifecycle.py  pyproject.toml
.github/: copilot-instructions.md
.github/skills/content-draft/: SKILL.md
.github/skills/dossier-gather/: SKILL.md
.github/skills/feed-insights/: SKILL.md
.github/skills/outreach/: SKILL.md
config/content-draft/: default.md  quick_take.md  skeptical_strategist.md
config/dossier-gather/: companies.md  default.md  jobs.md  people.md
config/feed-insights/: default.md
data/dossiers/active/people/: satya_nadella-microsoft.md
data/posts/raw/: EXAMPLE_idea.md
src/liis/: README.md  __init__.py  cli.py  config.py  index.py  models.py  normalize.py  storage.py  utils.py
src/liis/normalization/: README.md  dossiers.py  feed.py
src/liis/workflows/: README.md  dossiers.py  feed_insights.py  posts.py
src/liis/workflows/dossier/: README.md  __init__.py  prompt.py  renderers.py
src/liis/workflows/feed/: README.md  __init__.py  prompt.py  render.py  signals.py
src/liis/workflows/outreach/: README.md  __init__.py  targets.py  workflow.py
src/liis/workflows/post/: README.md  __init__.py  prompt.py
tests/: conftest.py  test_liis.py
