[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-intelligence-agent"
version = "0.1.0"
description = "AI-powered LinkedIn intelligence gathering with rate-limiting and LLM synthesis"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Ajaay Srinivaas R", email = "ajay@example.com"}
]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
liis = "liis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["liis*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
tmp_path_retention_policy = "none"
tmp_path_retention_count = 0
markers = [
    "integration: marks tests as integration tests",
]
